[package]
name = "spartan"
version = "0.7.0"
authors = ["ivan770 <leshenko.ivan770@gmail.com>"]
edition = "2018"

[[bin]]
name = "spartan"
path = "spartan/main.rs"

[lib]
name = "spartan_lib"
path = "spartan_lib/lib.rs"

[profile.release]
lto = true

[features]
default = ["replication", "init"]

# Queue replication support
replication = ["tokio-util", "itertools"]

# Init command
init = ["dialoguer"]

[dependencies]
actix-web = { version = "3.2" }
actix-rt = { version = "1.1" }
actix-service = { version = "1.0" }
structopt = { version = "0.3" }
log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }
serde = { version = "1.0" }
bincode = { version = "1.3" }
toml = { version = "0.5" }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
futures-util = { version = "0.3" }
once_cell = { version = "1.4" } 
tokio-util = { version = "0.3", optional = true }
itertools = { version = "0.9", optional = true }
cfg-if = { version = "1.0" }
dialoguer = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = { version = "3.1" }

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-threaded", "fs", "tcp", "sync"]

[dependencies.maybe-owned]
version = "0.3"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]