[package]
name = "spartan"
version = "0.3.1"
authors = ["ivan770 <leshenko.ivan770@gmail.com>"]
edition = "2018"

[dependencies.spartan_lib]
path = "../spartan_lib"

[dependencies.tide]
git = "https://github.com/ivan770/tide"

[dependencies.async-std]
version = "1.6.0"
features = ["attributes"]

[dependencies.structopt]
version = "0.3"

[dependencies.log]
version = "0.4"

[dependencies.pretty_env_logger]
version = "0.4"

[dependencies.serde]
version = "1.0"

[dependencies.bincode]
version = "1.2"

[dependencies.toml]
version = "0.5"

[dependencies.thiserror]
version = "1.0"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.derive-new]
version = "0.5"

[dependencies.anyhow]
version = "1.0"

[dependencies.futures]
version = "0.3"

[dependencies.async-ctrlc]
version = "1.2"