[package]
name = "spartan_lib"
version = "0.1.0"
authors = ["ivan770 <leshenko.ivan770@gmail.com>"]
edition = "2018"

[features]
default = ["node"]
node = ["bincode"]

[dependencies.thiserror]
version = "1.0"

[dependencies.bincode]
optional = true
version = "1.2"

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.rand]
version = "0.7"